--- a/Dictionary_App/style.css
+++ b/Dictionary_App/style.css
@@ -70,6 +70,14 @@ body {
 ::placeholder {
   font-family: "Courier New", Courier, monospace;
 }
+footer {
+  color: #ffffff;
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;
+  background:transparent;
+}
 
 /* Media Queries for responsiveness */
 
