--- a/Tour-Project-main/css/style.css
+++ b/Tour-Project-main/css/style.css
@@ -48,6 +48,11 @@ section {
   padding: 1rem 3rem;
   border-radius: 40px;
 }
+
+.navbar{
+  gap: 2rem;
+}
+
 .btn:hover {
   background: black;
   color: white;
@@ -63,6 +68,7 @@ section {
   top: 0;
   left: 0;
   right: 0;
+  justify-content: space-between;
   padding: 2rem 9%;
   z-index: 1000;
   display: flex;
@@ -73,7 +79,7 @@ section {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 .header .logo {
-  margin-right: auto;
+  /* margin-right: auto; */
   font-size: 2.5rem;
   color: black;
   font-weight: bolder;
@@ -145,6 +151,7 @@ section {
 .btn1 button[type="submit"] {
   background-color: transparent;
   font-size: 15px;
+  cursor: pointer;
   font-weight: 500;
 }
 
