--- a/Grocery-Store-main/style.css
+++ b/Grocery-Store-main/style.css
@@ -328,3 +328,19 @@ section{
         font-size: 50%;
     }
 }
+
+
+
+.container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 20px;
+}
+
+.product{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
